--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://example:<YOUR_API_KEY>@text/text:main"
-NEXTAUTH_SECRET="run: openssl rand -base64 32"
+DATABASE_URL="postgresql://example:<run: "openssl rand -base64 33">@text/text:main"
+NEXTAUTH_SECRET="run: "openssl rand -base64 32""
 GOOGLE_CLIENT_ID="get-your-google-client-id"
 GOOGLE_CLIENT_SECRET="get-your-google-client-secret"
