--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,15 @@
-DATABASE_URL="postgresql://example:xau_<run: "openssl rand -base64 33">@text/text:main"
+NEXT_PUBLIC_CRUD_API_KEY=
+NEXT_PUBLIC_API_URL=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+NEXT_PRIVATE_DEBUG_CACHE=
+
+DATABASE_URL=
+
+AUTH_SECRET=
 NEXTAUTH_SECRET="run: "openssl rand -base64 32""
-GOOGLE_CLIENT_ID="get-your-google-client-id"
-GOOGLE_CLIENT_SECRET="get-your-google-client-secret"
