updated vscode config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
       "**/.git": true,
       "**/.next": true,
       "**/node_modules": true
+  },
+  "material-icon-theme.folders.associations": {
+    "actions": "interface",
+    "refs": "constant",
   }
 }
